--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/matchme_gaming
 spring.datasource.username=postgres
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -16,7 +16,6 @@ spring.jpa.properties.hibernate.order_updates=true
 
 # Server configuration
 server.port=8080
-server.servlet.context-path=/api
 
 # Logging
 logging.level.com.matchme=DEBUG
