--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # application.properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/matchme_gaming
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=admin
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
