--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/matchme_gaming
 spring.datasource.username=postgres
 
-spring.datasource.password=password
+spring.datasource.password=admin
 
 
 spring.jpa.hibernate.ddl-auto=update
