--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,6 +22,7 @@ server.port=8080
 # Logging
 logging.level.com.matchme=DEBUG
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.web.FilterChainProxy=INFO
 
 # Admin User Configuration
 # Only set these in development - leave empty in production
